--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,7 +1,20 @@
 /* GLOBAL */
 @import "./common/variables.scss";
 @import "./common/global.scss";
+@import "./common/mixins.scss";
 @import "./common/fonts.scss";
 
 /* BLOCKS */
+@import "./blocks/page.scss";
 @import "./blocks/header.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/operating-principle.scss";
+@import "./blocks/example.scss";
+@import "./blocks/invitation.scss";
+@import "./blocks/button.scss";
+@import "./blocks/page-catalog.scss";
+@import "./blocks/card.scss";
+@import "./blocks/additional-products.scss";
+@import "./blocks/additional-product.scss";
+
